tests/language_tests/pass/0149_pop_returns_last_value_and_shrinks.ee
fn main() {
    let arr = [1, 2, 3];
    println(pop(arr));
    println(len(arr));
    println(pop(arr));
    println(pop(arr));
    println(len(arr));
}
