tests/language_tests/fail/0086_nested_index_non_array.ee
fn main() {
    let values = [1, 2, 3];
    println(values[0][0]);
}
